refactor: npg
changed `getSessionPaymentMethod` API to accept `orderId` instead of `sessionId`
