# api-spec/api.yaml
@@ -234,7 +234,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemJson'
-  /payment-methods/{id}/sessions/{sessionId}:
+  /payment-methods/{id}/sessions/{orderId}:
     get:
       tags:
         - payment-methods
@@ -248,9 +248,9 @@ paths:
           required: true
           schema:
             type: string
-        - name: sessionId
+        - name: orderId
           in: path
-          description: Session payment method ID related to NPG
+          description: Order id related to NPG session
           required: true
           schema:
             type: string
@@ -286,9 +286,9 @@ paths:
           required: true
           schema:
             type: string
-        - name: sessionId
+        - name: orderId
           in: path
-          description: Session payment method ID related to NPG
+          description: Order id related to NPG session
           required: true
           schema:
             type: string
